force-app/main/default/objects/CCR_AssetLifeCycle__c/CCR_AssetLifeCycle__c.object-meta.xml
<CustomObject>
    <description>Created to store information on the linking and unlinking of the Device.</description>
    <label>Asset Life Cycle</label>
    <nameField>
        <displayFormat>LC-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Life Cycles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>