force-app/main/default/objects/CCR_AssetLifeCycle__c/fields/CCR_Action__c.field-meta.xml
<CustomField>
    <fullName>CCR_Action__c</fullName>
    <description>Possible action performed on a device.</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Unlink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>