force-app/main/default/objects/CCR_AssetLifeCycle__c/fields/CCR_ActionDate__c.field-meta.xml
<CustomField>
    <fullName>CCR_ActionDate__c</fullName>
    <description>Date and time when the link / unlink action is performed.</description>
    <inlineHelpText>This field indicates the date and time when linking/unlinking the contact.</inlineHelpText>
    <label>Action Date Time</label>
    <type>DateTime</type>
</CustomField>