force-app/main/default/objects/CCR_AssetLifeCycle__c/fields/CCR_Asset__c.field-meta.xml
<CustomField>
    <fullName>CCR_Asset__c</fullName>
    <description>Reference to the asset for which the life cycle information belongs to.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Life Cycles</relationshipLabel>
    <relationshipName>AssetLifeCycles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>