force-app/main/default/objects/CCR_AssetLifeCycle__c/fields/CCR_Consumer__c.field-meta.xml
<CustomField>
    <fullName>CCR_Consumer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relationship to the contact with action associated to the device.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Asset Life Cycles</relationshipLabel>
    <relationshipName>AssetLifeCycles</relationshipName>
    <type>Lookup</type>
</CustomField>